<resources>
    <string name="app_name">NavBarLayout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="clubs_plu_edu">clubs@plu.edu</string>
    <string name="plu_clubs">PLU Clubs</string>
    <string name="search">Search</string>
    <string name="join">Join</string>
    <string name="contact">Contact</string>

    <string name="hello_blank_fragment">Here are some events</string>
    <string name="picture_of_the_clubs">Picture of the clubs</string>
    <string name="club_example">Club Example</string>
    <string name="chooser_title">Send an Email</string>
    <string name="email">example@plu.edu</string>
    <string name="connected">Connected</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="club_description">This is an example description. This description does not have any valuable information for anyone, nor does it help this app function in any way. However, it does allow the app to look like it would if there were an informative description.</string>
    <string name="navspinner">NavSpinner</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="end_time">End Time</string>
    <string name="location">Location</string>
    <string name="clubname">Clubname</string>
    <string name="event_name">Event Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="attending">Attending?</string>
    <string name="starttime">StartTime</string>
    <string name="name">Name</string>
    <string name="club">Club</string>
    <string name="new_event">New Event</string>
</resources>
