<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:adnroid="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_notifications"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search_button"
        android:icon="@drawable/ic_search"
        android:orderInCategory="90"
        android:title="@string/search"
        adnroid:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/spinner"
        android:title="@string/navspinner"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.Spinner" />

</menu>
